editorrte3